--- a/public/style.css
+++ b/public/style.css
@@ -81,6 +81,12 @@ form {
   max-width: 500px;
   margin: 0 auto;
 }
+form .error {
+  background: var(--black);
+  color: white;
+  padding: 5px;
+  text-align: center;
+}
 form .title {
   margin-bottom: 1, 5rem;
 }
